apollo/apollo.gram
file             : statement* EOF ;
statement        : expr_stmt
                 | assignment ;
assignment       : IDENTIFIER ( "=" expression) NEWLINE ;
expr_stmt        : expr NEWLINE ;
expression       : ternary ( "," ternary)* ;
ternary          : equality "if" equality "else" equality ;
equality         : comparison ( ( "!=" | "==" ) comparison )* ;
comparison       : term ( ( ">" | ">=" | "<" | "<=" ) term )* ;
term             : factor ( ( "-" | "+" ) factor )* ;
factor           : unary ( ( "/" | "*" ) unary )* ;
unary            : ( "not" | "-" ) unary
                 | primary ;

primary          : NUMBER | STRING | "true" | "false" | "nil"
                 | "(" expression ")"
                 | IDENTIFIER ;
